--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
+# Node modules
+node_modules
+**/node_modules
+
+# Parcel cache
+.parcel-cache
+
+# OS
+.DS_Store
+
+# Git
+.git
+
+# Other files
+*.log
+*.tmp
+*.temp
+*.old
+*.orig
+*.rej
+*.swp
+*.bak
+*.pyc
+*.class
 *.rbc
 *.fyc
+
+# Directories
+__pycache__/
+*.egg-info/
